--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,12 @@
             <meta-data android:name="android.appwidget.provider" 
                 android:resource="@xml/widget_4x2" />
         </receiver>
+        
+        <activity android:name=".WidgetConfigure">
+            <intent-filter>  
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"/>  
+            </intent-filter>  
+        </activity> 
 
     </application>
 
